# annie-rs

./: Cargo.toml  index.js  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
src/commands/: mod.rs
src/commands/monorepo/: mod.rs
src/commands/monorepo/package/: list.rs  mod.rs
